--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "axios": "^1.2.1",
+    "cdbreact": "^1.5.3",
     "firebase": "8.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
